<resources>
    <string name="app_name">h</string>
    <string name="underlined_sign_up"><u>Sign Up</u></string>
    <string name="underlined_forget_password"><u>Forget Password?</u></string>
    <string name="underlined_sign_in"><u>Sign In</u></string>
    <string name="underlined_contact_us"><u>Contact Us</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="confirm_delete_haha">Confirm Delete Haha?</string>
    <string name="delete_will_be_permanently">Delete will be permanently</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About Us</string>
    <string name="find_partner_friend">(Find Partner Friend)</string>
    <string name="welcome_to_fpf_where_creativity_knows_no_limits_we_are_fpf_the_quot">Welcome to FPF where creativity knows no limits.  We are FPF, the "Study Buddy" platform that connects students or learners.</string>
    <string name="our_mission">Our Mission:</string>
    <string name="at_fpf_our_mission_is_to_empower_students_we_provide_a_dedicated_platform_for_students_to_find_gather_and_communicate_their_learning_materials_we_believe_in_breaking_down_barriers_so_that_everyone_can_find_the_right_soulmate_learning_partner">At FPF, our mission is to empower students. We provide a dedicated platform for students to find, gather and communicate their learning materials. We believe in breaking down barriers so that everyone can find the right soulmate (learning partner).</string>
    <string name="why_fpf">Why FPF?</string>
    <string name="fpf_is_the_preferred_learning_partner_platform_for_students_because_we_provide_practical_features_and_friendly_experiences_to_build_a_tight_knit_learning_community_choosing_fpf_means_choosing_a_learning_partner_who_walks_with_you_and_grows_together_to_inject_vitality_and_possibility_into_your_academic_journey">FPF is the preferred learning partner platform for students because we provide practical features and friendly experiences to build a tight-knit learning community. Choosing FPF means choosing a learning partner who walks with you and grows together to inject vitality and possibility into your academic journey.</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="problem_type">Problem Type</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="add_a_title">Add a Title...</string>
    <string name="type_something_to_describe">Type something to describe...</string>
    <string name="google_meet_link">Google Meet Link</string>
    <string name="select_a_category">Select a Category</string>
    <string name="select_a_learning_style">Select a Learning Style</string>
    <string name="next">Next</string>
    <string name="profileName">Name</string>
    <string name="profileLanguages">Language</string>
    <string name="profileMobile_phone">Mobile Phone</string>
    <string name="profilrBirthday">Birthday</string>
    <string name="profileDescription">Description</string>
    <string name="profileSave">Save</string>
    <string name="filter">Filter</string>
    <string name="category">Category</string>
    <string name="learning_style">Learning Style</string>
    <string name="add_buddy">Add Buddy</string>
    <string name="message">Message</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="all_buddies">All Buddies</string>
    <string name="_20_buddies">20 Buddies</string>
    <string name="typing">Typing...</string>
    <string name="chat_with_groups">Chat with Groups</string>
    <string name="search_your_groups">search your groups</string>
    <string name="group">Group</string>
    <string name="all">ALL</string>
    <string name="InnerChatTyping">Typing...</string>
    <string name="view_post">View Post</string>
    <string name="invite_friends_to_join">Invite Friends to Join</string>
    <string name="invite_more_friends_to_join_the_discussion_now">Invite more friends to join the discussion now!!</string>
    <string name="done">Done</string>
    <string name="search_by_name">search by name</string>
    <string name="assignment">Assignment</string>
    <string name="visual_learning">Visual Learning</string>
    <string name="join">Join</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="_4_comments">4 comments</string>
    <string name="new_password">New Password</string>
    <string name="new_password_title">New Password</string>
    <string name="confirm_password_title">Confirm Password</string>
    <string name="submit_passRecover">Submit</string>
    <string name="chat_with_buddies">Chat with Buddies</string>
    <string name="search_your_buddies">search your buddies</string>
    <string name="chat">Chat</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="prc_email">Email</string>
    <string name="security_question">What is your favorite movie?</string>
    <string name="prc_submit">Submit</string>
    <string name="need_help">Need help?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_groups">Groups</string>
    <string name="profile_friends">Friends</string>
    <string name="create_post">New Post</string>
    <string name="sign_up">Sign UP</string>
    <string name="signUpName">Name</string>
    <string name="signUpMobile_number">Mobile Number</string>
    <string name="signUpBirthday">Birthday</string>
    <string name="signUpPassword">Password</string>
    <string name="signUp_security_question">What is your favorite movie?</string>
    <string name="signUp_sign_up_btn">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="SignUpEmail">Email</string>
    <string name="find_buddies">Find Buddies</string>
    <string name="study_with_other_study_partner">Study with other study partner!</string>
    <string name="search_by_name_category_or_learning_styles">search by name, category or learning styles</string>
    <string name="add_buddies">Add Buddies</string>
    <string name="suggest_buddies">Suggest Buddies</string>
    <string name="search_a_post">Search a Post</string>
    <string name="explore_something_special">Explore something special...</string>
    <string name="type_something_to_search">type something to search</string>
    <string name="search">Search</string>
    <string name="suggest_post">Suggest Post</string>
    <string name="settings">Settings</string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_contact_us">Contact Us</string>
    <string name="setting_language">Language</string>
    <string name="sign_in">Sign IN</string>
    <string name="signIn_email">Email</string>
    <string name="signIn_password">Password</string>
    <string name="sigIn_btn_sign_in">Sign In</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="home">Home</string>
    <string name="settings_menu">Settings</string>
    <string name="chat_menu">Chat</string>
    <string name="group_menu">Group</string>
    <string name="profile_menu">Profile</string>
    <string name="sign_out_menu">Sign Out</string>
    <string name="menu_open" translatable="false">Open</string>
    <string name="menu_close" translatable="false">Close</string>
    <string name="course_profile">Course</string>

    <array name="language_array">
        <item>English</item>
        <item>中文</item>
    </array>
    <array name="problem_type">
        <item>Can\'t Add Friends</item>
        <item>Can\'t Join Group</item>
        <item>Can\'t Upload Post</item>
        <item>Can\'t Login</item>
        <item>Others</item>
    </array>
    <array name="category">
        <item>Assignment</item>
        <item>Business</item>
        <item>Computer Science</item>
        <item>Account</item>
        <item>Graphic Design</item>
        <item>Degree</item>
        <item>Finance</item>
        <item>Medicine</item>
    </array>
    <array name="course">
        <item>Business</item>
        <item>Computer Science</item>
        <item>Account</item>
        <item>Graphic Design</item>
        <item>Media</item>
        <item>Finance</item>
        <item>Medicine</item>
        <item>Others</item>
    </array>
    <array name="learning_style">
        <item>Visual Learning</item>
        <item>Auditory Learning</item>
        <item>Kinesthetic Learning</item>
        <item>Reading / Writing Learning</item>
        <item>Social Learning</item>
        <item>Solitary / Individual Learning</item>
    </array>
</resources>

