<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings_24"
            android:title="@string/settings_menu" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/outline_chat_24"
            android:title="@string/chat_menu" />

        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/baseline_people_outline_24"
            android:title="@string/group_menu" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/outline_account_circle_24"
            android:title="@string/profile_menu" />

    </group>
    <group android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <group>
                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/baseline_exit_to_app_24"
                        android:title="@string/sign_out_menu" />
                </group>
            </menu>
        </item>
    </group>
</menu>