<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deleteFriendDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



            <ImageView
                android:id="@+id/imgDeleteDeleteFriendDialog"
                android:layout_width="135dp"
                android:layout_height="118dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/delete" />

            <ImageView
                android:id="@+id/imgCloseDeleteFriendDialog"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_close_24" />

            <TextView
                android:id="@+id/tvDeleteDeleteFriendDialog"
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/caveat"
                android:text="@string/confirm_delete_haha"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/imgDeleteDeleteFriendDialog"
                app:layout_constraintStart_toStartOf="@+id/imgDeleteDeleteFriendDialog"
                app:layout_constraintTop_toBottomOf="@+id/imgDeleteDeleteFriendDialog" />

            <TextView
                android:id="@+id/tvNoteDeleteFriendDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/caveat"
                android:text="@string/delete_will_be_permanently"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tvDeleteDeleteFriendDialog"
                app:layout_constraintStart_toStartOf="@+id/tvDeleteDeleteFriendDialog"
                app:layout_constraintTop_toBottomOf="@+id/tvDeleteDeleteFriendDialog" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewBtnYesDeleteFriendDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNoteDeleteFriendDialog">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnYesDeleteFriendDialog"
                    android:layout_width="109dp"
                    android:layout_height="37dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/caveat"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/yes"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewBtnNoDeleteFriendDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardViewBtnYesDeleteFriendDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardViewBtnYesDeleteFriendDialog">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNoDeleteFriendDialog"
                    android:layout_width="109dp"
                    android:layout_height="37dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/caveat"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:text="@string/no"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>